--- a/UniSellApplication/app/src/main/res/values/strings.xml
+++ b/UniSellApplication/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="profile">Profile</string>
     <string name="category">Category</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="make_listing">Make Listing</string>
+    <string name="favorites">Favorites</string>
 </resources>
