--- a/UniSellApplication/app/src/main/res/values/strings.xml
+++ b/UniSellApplication/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="make_listing">Make Listing</string>
     <string name="favorites">Favorites</string>
+    <string name="home">Home</string>
 </resources>
