--- a/UniSellApplication/app/src/main/res/values/strings.xml
+++ b/UniSellApplication/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="make_listing">Make Listing</string>
     <string name="favorites">Favorites</string>
     <string name="home">Home</string>
+    <string name="mission">Mission</string>
 </resources>
