Added category screens

--- a/UniSellApplication/app/src/main/res/values/strings.xml
+++ b/UniSellApplication/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="school_supplies">School Supplies</string>
     <string name="textbooks">Textbooks</string>
     <string name="technoloy">Technoloy</string>
+    <string name="lab_equipment">Lab Equipment</string>
 </resources>
